<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ATMExplorer</string>
    <string name="navigation_item_title_list">List</string>
    <string name="navigation_item_title_map">Map</string>
    <string name="action_search">Search</string>
    <string name="action_map">Show on map</string>
    <string name="action_help">Help</string>
    <string name="drawer_open_title">ATM info</string>
    <string name="drawer_close_title">ATM explorer</string>
    <string name="description_text">Information</string>
    <string name="empty_drawer_message">There is nothing to show</string>
    <string name="google_map_user_position">I\'m here</string>
    <string name="unable_location_service_message">Location service unavailable</string>
    <string name="distance_meter">m</string>
    <string name="distance_kilometer">km</string>
    <string name="distance_meter_full">meters</string>
    <string name="distance_kilometer_full">kilometers</string>
    <string name="btn_show_text">Show on map</string>
    <string name="btn_show_all_text">Show all on map</string>
    <string name="search_hint">Search address</string>
    <string name="detail_message">Info about atm</string>
    <string name="btn_navi_text">Navigation</string>
    <string name="lbl_operationmode_text">Operation mode</string>
    <string name="lbl_desc_text">Description</string>
    <string name="menu_settings">Settings</string>

    <!--Bank group's values-->
    <string name="title_bankgroup">Bank group</string>
    <string name="title_group_atmosphere">Atmosphere</string>
    <string name="title_group_ukrcard">UkrCard</string>

    <!--<SQL raw queries START>-->
    <string name="sql_select_all">SELECT atms._id, banks.bank_name, cities.city_name, atms.address, banks.logo_name, atms.latitude,
        atms.time, atms.position, atms.type, atms.longitude FROM atms INNER JOIN banks ON banks._id=atms.id_bank
        INNER JOIN cities ON cities._id=atms.id_city
    </string>
    <string name="sql_filter_by_address">SELECT atms._id, banks.bank_name, cities.city_name, atms.address, bank.logo_name,
        atms.latitude, atms.longitude, atms.time, atms.position, atms.type FROM atms INNER JOIN banks ON
        banks._id=atms.id_bank INNER JOIN cities ON cities._id=atms.id_city WHERE atms.address LIKE ?
    </string>
    <string name="sql_select_banks_from_group">SELECT atms._id, banks.bank_name, cities.city_name, atms.address, banks.logo_name, atms.latitude,
        atms.time, atms.position, atms.type, atms.longitude FROM atms INNER JOIN banks ON banks._id=atms.id_bank
        INNER JOIN cities ON cities._id=atms.id_city INNER JOIN bank_groups ON bank_groups._id=banks.id_bank_groups WHERE
        bank_groups._id LIKE ?
    </string>
    <!--<SQL raw queries END>-->

    <!-- Preferences START-->
    <string-array name="navigation_types_list_key">
        <item>Yandex</item>
        <item>Google</item>
    </string-array>

    <string-array name="navigation_types_list_value">
        <item>Yandex</item>
        <item>Google</item>
    </string-array>

    <string name="map_settings_category_title">Maps settings</string>
    <string name="map_settings_category_summary">Setup options related to map</string>
    <string name="navigation_type_title">Choose navigation type:</string>
    <string name="atm_list_category_title">List settings</string>
    <string name="atm_list_category_summary">Setup options related to ATM list</string>
    <string name="distance_title">Setup the area of visible ATMs</string>
    <string name="distance_dialog_title">Set the distance</string>
    <string name="distance_summary">Maximum radius of area</string>
    <!-- Preferences END-->


</resources>
