<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:key="map_settings_category"
            android:title="@string/map_settings_category_title"
            android:summary="@string/map_settings_category_summary">

    <ListPreference
            android:entries="@array/navigation_types_list_key"
            android:entryValues="@array/navigation_types_list_value"
            android:key="navi_type"
            android:defaultValue="Google"
            android:summary="%s"
            android:title="@string/navigation_type_title"/>
    </PreferenceCategory>

    <PreferenceCategory
            android:key="atm_list_settings_category"
            android:title="@string/atm_list_category_title"
            android:summary="@string/atm_list_category_summary">

        <com.atmexplorer.DistanceDialog
                android:key="pref_distance_key"
                android:title="@string/distance_title"
                android:dialogTitle="@string/distance_dialog_title"
                android:summary="@string/distance_summary"
                android:persistent="true"
                android:defaultValue="@integer/distance_default_value"/>
    </PreferenceCategory>

    <PreferenceCategory
            android:key="language_settings"
            android:title="@string/language_settings_title"
            android:summary="@string/language_settings_summary">
        <ListPreference
                android:entries="@array/language_types_list_key"
                android:entryValues="@array/language_types_list_value"
                android:key="language_type"
                android:defaultValue="ru"
                android:summary="%s"
                android:title="@string/language_settings_summary">
        </ListPreference>

    </PreferenceCategory>

</PreferenceScreen>